name:                db-bench
version:             0.1.0.0
synopsis:            Haskell database performance suite
homepage:            http://nurpax.github.com/db-bench
license:             MIT
author:              Janne Hellsten
maintainer:          jjhellst@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.8

executable db-bench
  hs-source-dirs:    sqlite-simple
  main-is:           Main.hs
  build-depends:     base ==4.5.*
                   , sqlite-simple
                   , criterion
