name:                db-bench
version:             0.1.0.0
synopsis:            Haskell database performance suite
homepage:            http://nurpax.github.com/db-bench
license:             MIT
author:              Janne Hellsten
maintainer:          jjhellst@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.8

executable db-util
  hs-source-dirs:    db-util
  main-is:           Main.hs
  build-depends:     base == 4.5.*
                   , optparse-applicative >= 0.4
                   , text
                   , sqlite-simple
                   , time

executable bench-sqlite-simple
  hs-source-dirs:    haskell
  main-is:           Main.hs
  build-depends:     base == 4.5.*
                   , optparse-applicative >= 0.4
                   , sqlite-simple
                   , text
                   , criterion
